removendo overflow do header/ bug ao mostrar div das subcategorias

--- a/src/components/loja/Header/nav/Links.module.css
+++ b/src/components/loja/Header/nav/Links.module.css
@@ -1,8 +1,6 @@
 .container_nav {
   margin-top: 8px;
   position: relative;
-  overflow-x: auto;
-  overflow-y: hidden;
 }
 
 .categorias_lista {
